<resources>
    <string name="app_name">Stage1st Go</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="welcome">欢迎您回来&#160;&#160;</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="please_input_un_pw">请输入用户名和密码</string>
    <string name="cancel">取消</string>
    <string name="sorry">抱歉,网络异常或者您尚未登录!</string>
    <string name="set_threads">发帖</string>
    <string name="set_reviews">回帖</string>
    <string name="too_little_words">回复字数过少</string>
    <string name="please_input_reviews">请输入标题或者回复内容</string>
    <string name="tips">提示</string>
    <string name="wait_a_moment">正在发送,稍等片刻</string>
    <string name="confirmation_reviews_give_up">确认放弃回复吗?</string>
    <string name="confirmation_set">确认发送吗?</string>
    <string name="the_word_too_much_or_too_little">正文字数过多或少</string>
    <string name="title_word_too_much">标题字数过少</string>
    <string name="title_word_too_little">标题字数过多</string>
    <string name="please_intput_title_or_body">请输入标题或者正文</string>
    <string name="set_failed">发送失败</string>
    <string name="set_succeed">发送成功</string>
    <string name="set_pic">......</string>
    <string name="title">标题 (最少6字)</string>
    <string name="content">正文 (最少6字)</string>
    <string name="set">发送</string>
    <string name="louzhu">楼主</string>
    <string name="lou">楼</string>
    <string name="other">其他</string>
    <string name="about">关于</string>
    <string name="clean_pic_cache">清空图片缓存</string>
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->
    <!--<string name="set_reviews">正文字数过多或少</string>-->
    <!--<string name="set_reviews">发帖</string>-->


    <string name="text_style_show">字体显示</string>

    <string name="text_size">字体大小</string>
    <string name="please_select_text_size">请选择字体大小(没用)</string>
    <string-array name="select_text_size">
        <item>大</item>
        <item>中</item>
        <item>小</item>
    </string-array>
    <string-array name="select_text_size_value">
        <item>big</item>
        <item>normal</item>
        <item>small</item>
    </string-array>
    <string name="select_text_size_value_default">normal</string>

    <string name="pic_show">图片显示</string>

    <string name="avatar_display_mode">头像显示模式</string>
    <string name="please_select_avatar_display_mode">请选择头像显示模式</string>
    <string-array name="select_avatar_display_mode">
        <item>头像大图</item>
        <item>头像小图</item>
        <item>不加载头像</item>
    </string-array>
    <string-array name="select_avatar_mode_value">
        <item>big_avatar</item>
        <item>small_avatar</item>
        <item>no_avatar</item>
    </string-array>
    <string name="select_avatar_display_mode_value_default">big_avatar</string>

    <string name="pic_display_mode">图片显示模式</string>
    <string name="please_select_pic_display_mode">请选择图片显示模式</string>
    <string-array name="select_pic_display_mode">
        <item>WiFi连接时显示</item>
        <item>显示</item>
        <item>不显示</item>
    </string-array>
    <string-array name="select_pic_mode_value">
        <item>wifi</item>
        <item>display</item>
        <item>no_display</item>
    </string-array>
    <string name="select_pic_display_mode_value_default">display</string>

</resources>
